SERVER-16052 fix $explain queries for clusters with shards at version 2.6 or earlier